[tool.poetry]
name = "splade-api"
version = "0.1.0"
description = "SPLADE v3 Lexical API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = ">=0.100.0"
uvicorn = { version = ">=0.20.0", extras = ["standard"] }
pydantic = ">=2.0.0"
transformers = ">=4.40.0"
tokenizers = ">=0.15.0"
torch = { version = ">=2.2.0", source = "pytorch-cpu", markers = "sys_platform == 'linux'" }
flask = "^3.1.1"
flask-cors = "^6.0.1"
fitz = "^0.0.1.dev2"
requests = "^2.32.5"
pymupdf = "^1.26.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Only this extra source is needed
[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
secondary = true